// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManifestSelection tests delete manifest list works correctly 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
  >
    <div
      class="manifestList listHeader"
    >
      <span
        class="tableHeader"
      >
        common.ID
      </span>
      <span
        class="tableHeader"
      >
        pipelineSteps.serviceTab.manifestList.manifestType
      </span>
      <span
        class="tableHeader"
      >
        pipelineSteps.serviceTab.manifestList.manifestStore
      </span>
      <span
        class="tableHeader"
      >
        location
      </span>
      <span />
    </div>
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
    >
      <section>
        <section
          class="manifestList rowItem"
        >
          <div
            class="columnId"
          >
            <span
              class="bp3-icon StyledProps--main StyledProps--inline"
              data-icon="service-kubernetes"
            >
              <svg
                height="20"
                viewBox="0 0 14 14"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 .4c-.1 0-.2 0-.3.1L2 2.7c-.2.1-.4.3-.5.6l-1.2 5c-.1.2 0 .5.1.7l.1.1 3.2 4c.2.2.4.3.7.3h5.2c.3 0 .5-.1.7-.3l3.2-4c.2-.2.2-.5.2-.7l-1.2-5c-.1-.3-.2-.5-.5-.6L7.3.6c0-.1-.2-.2-.3-.2z"
                  fill="#326ce5"
                />
                <path
                  d="M7 2.1c-.2 0-.3.1-.3.3v.9c0 .1-.1.1-.1.1v.1c-.2 0-.3 0-.5.1-.7.2-1.4.5-1.8 1l-.1-.1H4c-.1-.1-.2-.2-.4-.3L3.4 4h-.1c-.1 0-.1-.1-.2-.1s-.2 0-.2.1c-.1.1-.1.3.1.4h.1c.1.1.2.1.2.1.2.1.3.2.4.3 0 0 .1.1.1.2l.1.1c-.5.7-.7 1.6-.6 2.5h-.1l-.1.1c-.1 0-.3.1-.5.1h-.4c-.2 0-.3.2-.2.3 0 .1.2.2.4.2h.1c.1 0 .2-.1.3-.1.2-.1.3-.1.5-.1.1 0 .1 0 .2.1h.1c.3.9.9 1.6 1.6 2l-.1.1v.2c-.1.1-.1.3-.3.5-.1.1-.1.1-.1.2v.1c-.1.2 0 .3.1.4s.3 0 .4-.2v-.1c0-.1.1-.2.1-.3.1-.2.1-.4.2-.5 0 0 .1 0 .1-.1l.1-.1c.6.2 1.4.3 2.1.2.2 0 .3-.1.5-.1l.1.1s.1 0 .1.1c.1.1.1.3.2.5 0 .1 0 .2.1.3v.1c.1.2.2.2.4.2.1-.1.2-.2.1-.4v-.1c0-.1-.1-.1-.1-.2-.1-.2-.2-.3-.2-.4V10.4c.8-.5 1.3-1.2 1.6-2h.1s.1-.1.2-.1.3.1.5.1c.1 0 .2.1.3.1h.1c.2 0 .3-.1.4-.2 0-.1-.1-.3-.2-.3h-.4c-.2 0-.4 0-.5-.1-.1 0-.1-.1-.1-.1h-.1c.1-.4 0-.9-.1-1.3s-.3-.9-.5-1.2l.1-.1c0-.1 0-.1.1-.2s.2-.2.4-.3c.1 0 .2-.1.2-.1h.1c.1-.1.2-.3.1-.4s-.3-.1-.4 0h-.1l-.2.2c-.1.1-.3.3-.4.3H10l-.1.1c-.6-.6-1.4-1-2.3-1.1v-.1l-.1-.1V3v-.4c-.2-.3-.3-.5-.5-.5zm-.3 2.2l-.1 1.5c0 .1-.1.2-.2.2h-.1l-1.2-.9c.4-.4.8-.6 1.4-.8zm.7 0c.6.1 1.2.4 1.7.8l-1.2.8c-.1.1-.3.1-.3 0l-.1-.1zM4.6 5.7l1.1 1c.1.1.1.2 0 .3l-.1.1-1.4.4c-.1-.7 0-1.3.4-1.8zm4.9 0c.2.3.3.6.4.9s.1.6.1.9l-1.4-.4c-.1 0-.2-.2-.2-.3s0-.1.1-.1zm-2.7 1h.4l.3.3-.1.4-.4.2-.4-.2-.1-.4zm1.4 1.2c.1 0 .1 0 0 0l1.5.2c-.2.6-.6 1.1-1.2 1.5l-.6-1.4c.1-.1.1-.2.3-.3zm-2.4 0c.1 0 .2.1.2.2v.2l-.6 1.4c-.5-.3-.9-.8-1.2-1.5zm1.2.6l.2.1.7 1.3c-.1 0-.2.1-.3.1-.5.1-1.1.1-1.6-.1l.7-1.3c.2 0 .2-.1.3-.1z"
                  fill="#fff"
                  stroke="#fff"
                  stroke-width="0.25"
                />
              </svg>
            </span>
            <span
              class="StyledProps--font Text--lineclamp StyledProps--main type StyledProps--inline StyledProps--color StyledProps--color-black"
              style="--text-line-clamp: 1; width: 150px;"
            >
              idtest
            </span>
          </div>
          <div>
            pipeline.manifestTypeLabels.K8sManifest
          </div>
          <div
            class="connectorNameField"
          >
            <span
              class="bp3-icon StyledProps--main StyledProps--padding-right-small"
              data-icon="service-github"
            >
              <svg
                height="18"
                viewBox="0 0 14 14"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13.6 6.4l-6-6C7.3.1 6.7.1 6.4.4L5.1 1.6l1.6 1.6c.4-.1.8 0 1.1.3s.4.7.2 1.1l1.5 1.5c.4-.1.8 0 1.1.2.4.4.4 1.1 0 1.5s-1.1.4-1.5 0c-.3-.3-.3-.7-.2-1.1L7.5 5.3V9c.1 0 .2.1.3.2.4.4.4 1.1 0 1.5s-1.1.4-1.5 0-.4-1.1 0-1.5c.1-.1.2-.2.3-.2V5.2c-.1-.1-.2-.1-.3-.2-.3-.4-.4-.8-.2-1.2L4.5 2.3.4 6.4c-.3.3-.3.9 0 1.2l6 6c.3.3.9.3 1.2 0l6-6c.3-.3.3-.9 0-1.2z"
                  fill="#f42534"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main connectorName"
              style="--text-line-clamp: 1;"
            >
              account.Rohan_Github_ALL_HANDS
            </p>
            <span
              class="bp3-icon bp3-icon-full-circle StyledProps--main StyledProps--color"
              icon="full-circle"
            >
              <svg
                data-icon="full-circle"
                height="12"
                viewBox="0 0 16 16"
                width="12"
              >
                <desc>
                  full-circle
                </desc>
                <path
                  d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main"
              style="--text-line-clamp: 1; width: 200px;"
            >
              <span
                class="noWrap"
              >
                path
              </span>
            </p>
          </span>
          <span>
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-edit StyledProps--main"
                  icon="edit"
                >
                  <svg
                    data-icon="edit"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      edit
                    </desc>
                    <path
                      d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
              <button
                class="bp3-button bp3-disabled bp3-loading bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <div
                  class="bp3-spinner bp3-button-spinner"
                >
                  <div
                    class="bp3-spinner-animation"
                  >
                    <svg
                      height="20"
                      stroke-width="16.00"
                      viewBox="-3.00 -3.00 106.00 106.00"
                      width="20"
                    >
                      <path
                        class="bp3-spinner-track"
                        d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                      />
                      <path
                        class="bp3-spinner-head"
                        d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                        pathLength="280"
                        stroke-dasharray="280 280"
                        stroke-dashoffset="210"
                      />
                    </svg>
                  </div>
                </div>
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="main-trash"
                >
                  <svg
                    height="16"
                    viewBox="0 0 11 14"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.3.7H6.9c0-.4-.3-.7-.7-.7H4.8c-.4 0-.7.3-.7.7H.7C.3.7 0 1 0 1.4v.7h11v-.7c0-.4-.3-.7-.7-.7zm.4 2.1H.3c-.1 0-.3.2-.3.4s.2.3.3.3h.3v9.8c.1.4.4.7.8.7h8.2c.4 0 .7-.3.7-.7V3.5h.3c.2 0 .3-.2.3-.3.1-.2-.1-.4-.2-.4zm-7.3 8.4c0 .4-.3.7-.7.7s-.7-.3-.7-.7V5.6c0-.4.3-.7.7-.7s.7.3.7.7zm2.8 0c0 .4-.3.7-.7.7s-.7-.3-.7-.7V5.6c0-.4.3-.7.7-.7s.7.3.7.7zm2.7 0c0 .4-.3.7-.7.7s-.7-.3-.7-.7V5.6c0-.4.3-.7.7-.7s.7.3.7.7z"
                      fill="#4d5969"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </span>
        </section>
      </section>
      <p
        class="StyledProps--font StyledProps--main StyledProps--intent-primary"
        data-test-id="addManifest"
        style="cursor: pointer;"
      >
        <span>
          pipelineSteps.serviceTab.manifestList.addManifest
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`ManifestSelection tests edit manifest list works correctly 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
  >
    <div
      class="manifestList listHeader"
    >
      <span
        class="tableHeader"
      >
        common.ID
      </span>
      <span
        class="tableHeader"
      >
        pipelineSteps.serviceTab.manifestList.manifestType
      </span>
      <span
        class="tableHeader"
      >
        pipelineSteps.serviceTab.manifestList.manifestStore
      </span>
      <span
        class="tableHeader"
      >
        location
      </span>
      <span />
    </div>
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
    >
      <section>
        <section
          class="manifestList rowItem"
        >
          <div
            class="columnId"
          >
            <span
              class="bp3-icon StyledProps--main StyledProps--inline"
              data-icon="kustamize"
            >
              <svg
                height="20"
                viewBox="0 0 26 30"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="#AFBBD8"
                  height="24"
                  rx="2"
                  width="20"
                />
                <rect
                  fill="#526EB3"
                  height="24"
                  opacity="0.7"
                  rx="2"
                  width="20"
                  x="3"
                  y="3"
                />
                <rect
                  fill="#36559E"
                  height="24"
                  rx="2"
                  width="20"
                  x="6"
                  y="6"
                />
                <path
                  clip-rule="evenodd"
                  d="M10 12h3v5l4.5-5h4l-4.68 4.954L22.5 25h-4l-3.84-5.759L13 21v4h-3V12z"
                  fill="#fff"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="StyledProps--font Text--lineclamp StyledProps--main type StyledProps--inline StyledProps--color StyledProps--color-black"
              style="--text-line-clamp: 1; width: 150px;"
            >
              id77
            </span>
          </div>
          <div>
            pipeline.manifestTypeLabels.KustomizeLabel
          </div>
          <div
            class="connectorNameField"
          >
            <span
              class="bp3-icon StyledProps--main StyledProps--padding-right-small"
              data-icon="bitbucket"
            >
              <svg
                height="18"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs>
                  <lineargradient
                    id="bitbucket_svg__b"
                    x1="108.633%"
                    x2="46.927%"
                    y1="13.408%"
                    y2="79.102%"
                  >
                    <stop
                      offset="18%"
                      stop-color="#0052CC"
                    />
                    <stop
                      offset="100%"
                      stop-color="#2684FF"
                    />
                  </lineargradient>
                  <filter
                    id="bitbucket_svg__a"
                  >
                    <fecolormatrix
                      in="SourceGraphic"
                      values="0 0 0 0 0.157377 0 0 0 0 0.161311 0 0 0 0 0.240000 0 0 0 1.000000 0"
                    />
                  </filter>
                </defs>
                <g
                  fill="none"
                  fill-rule="evenodd"
                  filter="url(#bitbucket_svg__a)"
                  transform="translate(2 3)"
                >
                  <path
                    d="M8.305 12.59h4.383l1.058-6.211H7.14z"
                  />
                  <path
                    d="M.681.008a.671.671 0 00-.518.235.68.68 0 00-.154.55l2.855 17.432c.074.44.45.764.895.768h13.698a.674.674 0 00.673-.568L20.985.797a.68.68 0 00-.154-.55.671.671 0 00-.519-.235L.682.008zm12.024 12.6H8.333l-1.184-6.22h6.615l-1.06 6.22z"
                    fill="#2684FF"
                    fill-rule="nonzero"
                  />
                  <path
                    d="M20.06 6.379h-6.308l-1.059 6.215H8.325L3.166 18.75a.908.908 0 00.588.223h13.691a.673.673 0 00.672-.568L20.06 6.38z"
                    fill="url(#bitbucket_svg__b)"
                    fill-rule="nonzero"
                  />
                </g>
              </svg>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main connectorName"
              style="--text-line-clamp: 1;"
            >
              account.Testbitbucke
            </p>
            <span
              class="bp3-icon bp3-icon-full-circle StyledProps--main StyledProps--color"
              icon="full-circle"
            >
              <svg
                data-icon="full-circle"
                height="12"
                viewBox="0 0 16 16"
                width="12"
              >
                <desc>
                  full-circle
                </desc>
                <path
                  d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main"
              style="--text-line-clamp: 1; width: 200px;"
            >
              <span
                class="noWrap"
              >
                test
              </span>
            </p>
          </span>
          <span>
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-edit StyledProps--main"
                  icon="edit"
                >
                  <svg
                    data-icon="edit"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      edit
                    </desc>
                    <path
                      d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="main-trash"
                >
                  <svg
                    height="16"
                    viewBox="0 0 11 14"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.3.7H6.9c0-.4-.3-.7-.7-.7H4.8c-.4 0-.7.3-.7.7H.7C.3.7 0 1 0 1.4v.7h11v-.7c0-.4-.3-.7-.7-.7zm.4 2.1H.3c-.1 0-.3.2-.3.4s.2.3.3.3h.3v9.8c.1.4.4.7.8.7h8.2c.4 0 .7-.3.7-.7V3.5h.3c.2 0 .3-.2.3-.3.1-.2-.1-.4-.2-.4zm-7.3 8.4c0 .4-.3.7-.7.7s-.7-.3-.7-.7V5.6c0-.4.3-.7.7-.7s.7.3.7.7zm2.8 0c0 .4-.3.7-.7.7s-.7-.3-.7-.7V5.6c0-.4.3-.7.7-.7s.7.3.7.7zm2.7 0c0 .4-.3.7-.7.7s-.7-.3-.7-.7V5.6c0-.4.3-.7.7-.7s.7.3.7.7z"
                      fill="#4d5969"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </span>
        </section>
      </section>
      <p
        class="StyledProps--font StyledProps--main StyledProps--intent-primary"
        data-test-id="addManifest"
        style="cursor: pointer;"
      >
        <span>
          pipelineSteps.serviceTab.manifestList.addManifest
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`ManifestSelection tests renders Manifest Listview with connectors Data 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
    >
      <section />
      <p
        class="StyledProps--font StyledProps--main StyledProps--intent-primary"
        data-test-id="addManifest"
        style="cursor: pointer;"
      >
        <span>
          pipelineSteps.serviceTab.manifestList.addManifest
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`ManifestSelection tests renders Manifest Listview with overrideSetIdentifier, isPropagating, isForOverrideSets 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
    >
      <section />
    </div>
  </div>
</div>
`;

exports[`ManifestSelection tests renders Manifest Listview without crashing 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
    >
      <section />
      <p
        class="StyledProps--font StyledProps--main StyledProps--intent-primary"
        data-test-id="addManifest"
        style="cursor: pointer;"
      >
        <span>
          pipelineSteps.serviceTab.manifestList.addManifest
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`ManifestSelection tests renders add Manifest option without crashing 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
      >
        <section />
        <p
          class="StyledProps--font StyledProps--main StyledProps--intent-primary"
          data-test-id="addManifest"
          style="cursor: pointer;"
        >
          <span>
            pipelineSteps.serviceTab.manifestList.addManifest
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`ManifestSelection tests renders manifest selection when overrideSetIdentifier and identifierName has some value 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
      >
        <section />
      </div>
    </div>
  </div>
</div>
`;

exports[`ManifestSelection tests renders without crashing 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
      >
        <section />
        <p
          class="StyledProps--font StyledProps--main StyledProps--intent-primary"
          data-test-id="addManifest"
          style="cursor: pointer;"
        >
          <span>
            pipelineSteps.serviceTab.manifestList.addManifest
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;
